# PhotoEditingApp

./: settings.gradle
app/: build.gradle
app/src/debug/res/values/: app_icon_background.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  photoEditor.c
app/src/main/java/com/example/photoeditingapp/: ConvolutionMatrix.java  Filters.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: style.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
